--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
             <div class="row container-min" ">
                 <img src="icons/hannesneu.png" alt="Web Dev Pro" class="logo-black">
                 <ul class="main-nav js--main-nav">
-                    <li><a href ="index.html">Home</a></li>                   
+                    <li><a href ="dan.html">Home</a></li>                   
                     <li><a href ="#work-pic"">Gallery</a></li>
                     <li><a href ="#contact-section">Contact Me</a></li>
                 </ul>
@@ -201,7 +201,7 @@
             <div class="row">
                 <div class="col col-1-of-2">
                     <ul class="footer-nav">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="dan.html">Home</a></li>
                         <li><a href ="#work-section" id = "last-work">Gallery</a></li>
                     </ul>
                 </div>
