--- a/dan.html
+++ b/dan.html
@@ -17,8 +17,8 @@
     
         <nav>
             <div class="row container-min" ">
-                <img src="icons/Backgroun-w.png" alt="Web Dev Pro" class="logo">
-                <img src="icons/hannesneu.png" alt="Web Dev Pro" class="logo-black">
+                <img src="Backgroun-w.png" alt="Web Dev Pro" class="logo">
+                <img src="hannesneu.png" alt="Web Dev Pro" class="logo-black">
                 <ul class="main-nav js--main-nav">
                     <li><a href ="#home-section">Home</a></li>                   
                     <li><a href ="#work-pic">Last Work</a></li>
