--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
     
         <nav>
             <div class="row container-min" ">
-                <img src="icons/hannesneu.png" alt="Web Dev Pro" class="logo-black">
+                <img src="hannesneu.png" alt="Web Dev Pro" class="logo-black">
                 <ul class="main-nav js--main-nav">
                     <li><a href ="dan.html">Home</a></li>                   
                     <li><a href ="#work-pic"">Gallery</a></li>
